...
		<Page
			title='Login'
			topInset>
			<HeaderContentWrapper containerClassName='shadow-none'>
				<HeaderReturn />
				<View className='absolute left-0 right-0 flex justify-center pointer-events-none'>
					<HeaderText text='Entrar com email e senha' />
				</View>
			</HeaderContentWrapper>

			<Loading
				isLoading={loadingLoginProviders || loading}
				fullScreen={true}
...
