...
		"txtProduct": "Produto",
		"txtProducts": "Produtos",
		"txtTotal": "Total",
		"txtItems": "Itens da sacola",
		"txtNoItems": "Nenhum item na sacola",
		"txtSubtotal": "Subtotal",
		"labelButton": "Finalizar Compra"
	},
	"emptyCart": {
		"title": "Finalizar Pedido",
		"txtEmptyCart": "Sua sacola está vazia",
		"txtAddItem": "Adicione produtos na sua sacola",
		"labelBack": "Voltar"
...
		"frmReceiveName": "Quem irá receber o pedido?",
		"frmStreet": "Rua / Avenida",
		"frmNeighborhood": "Bairro",
		"frmCity": "Cidade",
		"frmState": "Estado",
		"labelButton": "Continuar",
		"ok": "OK",
		"loading": "Aguarde...",
		"errorPostalCode": "Informe o CEP",
		"errorPostalCodeInvalid": "CEP deve ter 8 dígitos",
		"errorStreet": "Informe a rua/avenida",
		"errorNeighborhood": "Informe o bairro",
		"errorCity": "Informe a cidade",
...
